--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <!-- GameStop Search -->
                         <a href="https://www.gamestop.com/search/?q=mario+kart" class="carousel-slide" target="_blank">
                             <div class="preview-image">
-                                <img src="" alt="GameStop Search Preview" loading="lazy">
+                                <img src="assets/images/mario-kart.jpg" alt="Mario Kart" />
                             </div>
                             <div class="preview-content">
                                 <h3>GameStop Search</h3>
@@ -369,6 +369,7 @@
 
                 <!-- Contact Form -->
                 <form id="contact-form" class="contact-form">
+                    <div id="contact-status" class="status-message"></div>
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
