--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
     <header class="header">
         <div class="header-container container">
             <a href="/" class="logo">jesseclark.io</a>
-            <button class="menu-button" aria-label="Toggle menu">
-                <!-- Menu icon -->
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <line x1="3" y1="12" x2="21" y2="12"></line>
-                    <line x1="3" y1="6" x2="21" y2="6"></line>
-                    <line x1="3" y1="18" x2="21" y2="18"></line>
-                </svg>
+            <button class="menu-button" aria-label="Toggle menu" aria-expanded="false">
+                <span class="menu-icon"></span>
             </button>
             <nav class="main-nav">
                 <ul class="nav-list">
