--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
     <header class="header">
         <div class="header-container container">
             <a href="/" class="logo">jesseclark.io</a>
-            <button class="menu-button" aria-label="Toggle menu" aria-expanded="false">
-                <div class="menu-icon">
-                    <span class="menu-line"></span>
-                    <span class="menu-line"></span>
-                    <span class="menu-line"></span>
-						</div>
+            <button 
+                class="menu-button" 
+                aria-label="Toggle menu" 
+                aria-expanded="false"
+                type="button"
+            >
+                <span class="menu-icon"></span>
             </button>
             <nav class="main-nav">
                 <ul class="nav-list">
-                    <li><a href="#about" class="button button-secondary">ABOUT</a></li>
-                    <li><a href="#portfolio" class="button button-secondary">PORTFOLIO</a></li>
-                    <li><a href="#resume" class="button button-secondary">RESUME</a></li>
-                    <li><a href="#connect" class="button button-secondary">CONNECT</a></li>
+                    <li><a href="#about" class="button button-secondary" style="--button-index: 0">ABOUT</a></li>
+                    <li><a href="#portfolio" class="button button-secondary" style="--button-index: 1">PORTFOLIO</a></li>
+                    <li><a href="#resume" class="button button-secondary" style="--button-index: 2">RESUME</a></li>
+                    <li><a href="#connect" class="button button-secondary" style="--button-index: 3">CONNECT</a></li>
 							</ul>
 						</nav>
         </div>
@@ -364,12 +365,6 @@
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                 <rect x="2" y="9" width="4" height="12"></rect>
                                 <circle cx="4" cy="4" r="2"></circle>
-                            </svg>
-                        </a>
-                        <a href="mailto:jesseclark@duck.com" class="social-icon" aria-label="Email">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                                <polyline points="22,6 12,13 2,6"></polyline>
                             </svg>
                         </a>
                     </div>
