Updated resume section

--- a/index.html
+++ b/index.html
@@ -180,22 +180,23 @@
 
             <!-- Profile Summary -->
             <div class="resume-summary">
-                <h3>Product Leader & Culture Builder</h3>
+                <h3>Product Leader | Culture & Community Builder</h3>
+                <p class="tagline">Form Organizations, Establish Agile Operations, & Take Platforms from Zero to One</p>
                 <p class="summary-text">
-                    Building high-performing teams and delivering exceptional user experiences. Specializing in forming organizations, establishing agile operations, and taking platforms from zero to one.
+                    Accomplished Product Leader with expertise in driving <strong>product strategy</strong>, development, and execution. Proven track record in <strong>Lean Product Management</strong>, <strong>Generative AI</strong>, <strong>Mobile First Design</strong>, and <strong>Cross-functional Leadership</strong>. Successfully launched multiple products driving customer satisfaction and business value in e-commerce, fintech, and cybersecurity.
                 </p>
                 <div class="skills-grid">
                     <span class="skill-tag">Lean Product Management</span>
-                    <span class="skill-tag">Platform Ecosystems</span>
+                    <span class="skill-tag">Generative AI</span>
                     <span class="skill-tag">Mobile First Design</span>
                     <span class="skill-tag">Agile Development</span>
                     <span class="skill-tag">Cross-functional Leadership</span>
-                    <span class="skill-tag">People Leadership</span>
+                    <span class="skill-tag">Software Development Lifecycle</span>
                     <span class="skill-tag">Public Speaking</span>
-                    <span class="skill-tag">Software as a Service</span>
-                    <span class="skill-tag">Web Analytics</span>
+                    <span class="skill-tag">Stakeholder Management</span>
+                    <span class="skill-tag">User Analytics</span>
                     <span class="skill-tag">User Research</span>
-                    <span class="skill-tag">Usability Testing</span>
+                    <span class="skill-tag">People Leadership</span>
                 </div>
             </div>
 
@@ -213,13 +214,23 @@
                     <div class="role">
                         <h4>Senior Product Manager, Findability Experience</h4>
                         <p class="role-description">
-                            Leading cross-platform initiatives including experience-wide redesign, Circle Loyalty relaunch, and implementing generative AI in search.
+                            A proven top performer with a track record of consistent delivery on <strong>four major cross-platform initiatives</strong> in the first year, including an experience-wide redesign, Circle Loyalty relaunch, generative AI application in search, and context-aware experiences. Achieved <span class="metric">5%</span> improvement in search performance and drove <span class="metric">$1M+</span> monthly revenue through innovative features.
                         </p>
                         <ul class="achievements">
-                            <li>Directed a 15-person team to deploy Target's first generative AI application in search, providing guided experiences for 1% of annual search volume</li>
-                            <li>Led implementation of context-aware guest experience with server-driven UI architecture, projecting $2M+ annual revenue increase</li>
-                            <li>Launched Target Circle Deals filtering capability, driving millions in monthly attributable revenue</li>
-									</ul>
+                            <li>Pioneered Target's first generative AI application in search, directing a 15-person team to deploy a guided experience for 1% of annual search volume</li>
+                            <li>Delivered 3 context-aware experiences for discretionary product shoppers estimated to lift search revenue by 1%</li>
+                            <li>Generated > $1M in search revenue every 30 days by spearheading the launch of Target Circle Deals filtering functionality</li>
+                        </ul>
+                        <!-- Temporarily disabled role-skills
+                        <div class="role-skills">
+                            <span class="skill-tag">Generative AI</span>
+                            <span class="skill-tag">Product Strategy</span>
+                            <span class="skill-tag">E-Commerce</span>
+                            <span class="skill-tag">A/B Testing</span>
+                            <span class="skill-tag">Cross-functional Leadership</span>
+                            <span class="skill-tag">Agile Development</span>
+                        </div>
+                        -->
                     </div>
                 </div>
 
@@ -235,20 +246,43 @@
                     <div class="role">
                         <h4>Lead Product Manager, Search, Trade, and Inventory</h4>
                         <p class="role-description">
-                            Led platform modernization efforts and expanded scope to include inventory, trade, preowned, and warranty value streams.
+                            Promoted to Lead Product Manager for re-platforming search and redesigning the user experience, improving the click-through rate and 30-day performance by 5%. Managed inventory, trade, pre-owned, and warranty value streams. Cut real-time inventory visibility latency from a daily refresh and created a retro-gaming category strategy. Proven track record in driving product strategies and achieving results in gaming and retail.
                         </p>
                         <ul class="achievements">
-                            <li>Implemented real-time inventory servicing, reducing order cancellation rates</li>
-                            <li>Delivered store fulfillment administration portal managing 3000+ stores while maintaining &lt; 2% decline rates</li>
+                            <li>Launched real-time inventory servicing in a Texas store, eliminating redundant inventory data sources to reduce order cancellations caused by in-store discrepancies</li>
+                            <li>Developed and delivered the alpha version of a store fulfillment administration portal, empowering administrators to manage fulfillment eligibility for 3,000 stores and handle orders requiring manual intervention while keeping store fulfillment decline rates below 2%</li>
                         </ul>
+                        <!-- Temporarily disabled role-skills
+                        <div class="role-skills">
+                            <span class="skill-tag">Generative AI</span>
+                            <span class="skill-tag">Product Strategy</span>
+                            <span class="skill-tag">E-Commerce</span>
+                            <span class="skill-tag">A/B Testing</span>
+                            <span class="skill-tag">Cross-functional Leadership</span>
+                            <span class="skill-tag">Agile Development</span>
+                        </div>
+                        -->
                     </div>
                     <div class="role">
                         <h4>Senior Product Manager, Search Platform</h4>
+                        <p class="role-description">
+                            Led product management for a high-scale consumer product focused on omnichannel site search. Utilized expertise in search technology, data analysis, and user-centered design to develop a search platform (data acquisition, indexing, and guest-facing API) from inception to completion within 3 months, which became the primary pathway to purchase for GameStop shoppers after successful experimentation.</p>
                         <ul class="achievements">
-                            <li>Increased search result click-through rate by 5% through API and administration improvements</li>
-                            <li>Launched "get it fast" experience, driving 3-5% growth in daily store pickup orders</li>
-                            <li>Reduced page load times by 25% while serving millions of monthly sessions</li>
+                            <li>Developed and released a search API and administration capability, resulting in a 5% increase in search result click-through rate while maintaining overall checkout rates.</li>
+                            <li>Launched a "Get It Fast" user experience, enabling customers to easily find products available for store pickup or same-day delivery, driving a 3-5% growth in daily average store pickup orders and boosting profit margins</li>
+                            <li>Spearheaded the redesign of the discovery user experience, including features like "Shop My Store," optimized image assets, and elimination of redundant network calls. This resulted in a 25% reduction in page load times while serving millions of sessions monthly</li>
+                            <li>Continuously improved search relevance, focusing on high-volume search terms (representing 80% of monthly volume) through curated searches and retiring 60% of legacy search-driven redirects. Equipped site merchandising teams with insights on top "zero results" search phrases to further enhance the customer experience</li>
                         </ul>
+                        <!-- Temporarily disabled role-skills
+                        <div class="role-skills">
+                            <span class="skill-tag">Product Strategy</span>
+                            <span class="skill-tag">E-Commerce</span>
+                            <span class="skill-tag">Platform Architecture</span>
+                            <span class="skill-tag">User Research</span>
+                            <span class="skill-tag">A/B Testing</span>
+                            <span class="skill-tag">Cross-functional Leadership</span>
+                        </div>
+                        -->
                     </div>
 									</div>
 
@@ -264,22 +298,20 @@
                     <div class="role">
                         <h4>Group Product Manager, Customer Identity Platform</h4>
                         <p class="role-description">
-                            Led customer identity platform initiatives while building strong partnerships across design, technology, and business fraud teams. Focused on data-driven prioritization and value-driven outcomes.
-                        </p>
+                            Promoted to group product manager of the customer identity platform, where I mentored three team members, coaching two to transition into product management. I built strong partnerships with design, technology, and fraud teams to deliver the first release of the self-service identity administration portal. This reduced cycle time from months to days, enabling the William Sonoma credit card launch.                        </p>
                         <ul class="achievements">
-                            <li>Led 25-person cross-functional team to build identity verification workflows for William Sonoma co-branded credit card launch</li>
-                            <li>Established 100-member cross-business platform community and newsletter, driving partnership and reuse across organization</li>
+                            <li>Led a 25-person cross-functional team in the development, testing, and configuration of identity verification workflows for the launch of the William Sonoma co-branded credit card to mitigate the risk of fraudulent applications while maintaining a streamlined customer experience</li>
+                            <li>Established a 100-member cross-business platform community and newsletter, fostering collaboration and driving component reuse across the organization</li>
 									</ul>
                     </div>
                     <div class="role">
                         <h4>Senior Manager, Product Management, Architecture and Enterprise Search</h4>
                         <p class="role-description">
-                            Established lean product management practice for enterprise architecture engineering, focusing on user research and cross-division collaboration.
-                        </p>
+                            Practiced lean product management by creating a mission, vision, and road map for enterprise architecture engineering with daily improvements. Conducted 50 studies to identify issues and validate assumptions. Promoted cross-division awareness through blogging, public speaking, and CIO endorsements, enhancing code reuse, security, and resilience for over 400 applications.                        </p>
                         <ul class="achievements">
-                            <li>Released software inventory and enterprise search application, quantifying technology modernization progress</li>
-                            <li>Visualized technology modernization data for executive decision-making on software lifecycle management</li>
-                            <li>Co-founded 1000-member code reuse community improving software discovery across divisions</li>
+                            <li>Developed and launched a software inventory and enterprise search application that quantified technology modernization progress across all Capital One software. This equipped teams with actionable insights to enhance security, resilience, and compliance</li>
+                            <li>Created data visualizations experience that empowered the Chief Information Officer and Chief Architect to make informed decisions on software maintenance, investment, and retirement, optimizing technology capital allocation</li>
+                            <li>Co-founded a 1,000-member code reuse community, facilitating software discovery and reuse across divisions to improve efficiency and reduce redundant development efforts</li>
 								</ul>
                     </div>
 				</div>
@@ -296,23 +328,26 @@
                     <div class="role">
                         <h4>Group Product Manager, GhostRed</h4>
                         <p class="role-description">
-                            Led development of game-based technology competitions for recruiting and training, coordinating events across multiple countries.
-                        </p>
+                            Promoted to team lead and product manager for a newly formed agile team, born out of a volunteer effort, to create a public-facing service to build and run game-based technology competitions for recruiting and training. Ran 20 competitions globally, successfully hired 6 candidates and trained more than 300 in engineering and security acumen.</p>
                         <ul class="achievements">
-                            <li>Designed/coordinated 20 technology competitions, leading to 6 full-time hires for cloud technology organization</li>
-                            <li>Developed GE's first video game simulator for cyber security training, serving 300 executives</li>
+                            <li>Designed and coordinated 20 technology competitions over 12 months, resulting in 6 full-time hires for a newly formed cloud technology organization. These competitions effectively identified and attracted top talent</li>
+                            <li>Developed GE's first video game — Terminal, a hacker simulator — for two multi-day cybersecurity training sessions, engaging 300 executives and leadership program members. This innovative approach fostered cybersecurity awareness and enhanced technical skillsets</li>
                         </ul>
                     </div>
                     <div class="role">
                         <h4>Senior Product Manager, API Management</h4>
+                        <p class="role-description">
+                            Transitioned into product management while pursuing an MBA, successfully navigating complex organizational structures to achieve cross-functional alignment on key product decisions. Applied lean product management and marketing competencies, building 250-member engineering community and launched a new API platform that resulted in a $1MM in annual savings. Elevated security posture across all businesses.</p>
                         <ul class="achievements">
-                            <li>Influenced 250 engineers toward standardized authentication and self-service access, saving >$1MM annually</li>
+                            <li>Successfully influenced 250 engineers to adopt five authentication standards and self-service access provisioning. This initiative enhanced application security and is projected to drive cost savings exceeding $1 million annually.</li>
                         </ul>
                     </div>
                     <div class="role">
                         <h4>Lead Analyst, Data Loss Prevention</h4>
+                        <p class="role-description">
+                        First role following rotational leadership program deploying large-scale data protection ecosystem eliminating multi-million-dollar data breach vector. Developed strengths in cross-functional team leadership, executive communication, and cybersecurity engineering.</p>
                         <ul class="achievements">
-                            <li>Led 20-member security team to implement data protection controls, eliminating critical IP loss vectors</li>
+                            <li>Led a 20-member, cross-functional security team to architect, communicate, and deploy data protection controls that eliminated a multi-million-dollar risk vector for intellectual property loss.</li>
 						</ul>
                     </div>
 			</div>
@@ -328,20 +363,20 @@
                         <h4>Explore Interactive</h4>
                         <span class="position">Director of Marketing and Product Development</span>
                         <ul class="achievements">
-                            <li>Authored go-to-market strategy for educational technology startup, raising $130k in funding</li>
+                            <li>•	Developed a go-to-market strategy for an educational technology startup to raise $130k in funding. Managed the request for proposal process to select an engineering partner for launching the minimum viable product</li>
                         </ul>
                     </div>
                     <div class="role">
                         <h4>Digital Technology Leadership Program</h4>
                         <ul class="achievements">
-                            <li>Completed four 6-month rotations across Corporate IT, focusing on UI redesigns, infrastructure management, and security</li>
+                            <li>Achieved top ratings in four 6-month Corporate IT assignments, gaining experience in UI redesign, data center management, application architecture, and cybersecurity</li>
                         </ul>
                     </div>
                     <div class="role">
                         <h4>Deep Run High School</h4>
                         <span class="position">Chair of Advisory Board, Center for Information Technology</span>
                         <ul class="achievements">
-                            <li>Led program enhancement through curriculum development and student internship connections</li>
+                            <li>•	As chair of the advisory board, directed efforts to improve the program through new course development, connected students to internships, and identified student project sponsors</li>
 			</ul>
                     </div>
                 </div>
