--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     As an experienced leader with over a decade of experience, I excel in establishing new teams, building culture, and delivering efficient, agile product management operations. My approach is rooted in user-centered design strategies and data-driven decision making.
                 </p>
                 <p class="about-text">
-                    With an entrepreneurial mindset, I've led successful initiatives at major companies - from search platform modernization at GameStop to identity verification at Capital One, and game-based recruiting at GE. I thrive on building cross-functional partnerships and ensuring transparent execution of strategy.
+                    With an entrepreneurial mindset, I've led successful initiatives at major companies - from search platform modernization at GameStop to customer identity at Capital One, and game-based recruiting at GE. I thrive on building cross-functional partnerships and ensuring transparent execution of strategy.
                 </p>
                 <p class="about-text">
                     When I'm not building products, I'm passionate about supporting STEM education initiatives, serving as the advisory board chair at a local high school computer science department. I believe in empowering the next generation of technology leaders.
